Comment added to CourseContentPost.

--- a/src/main/resources/static/pages/icons.html
+++ b/src/main/resources/static/pages/icons.html
@@ -188,7 +188,7 @@
                         <li>
                             <a href="#">
                                 <div>
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
+                                    <i class="fa fa-description fa-fw"></i> New Comment
                                     <span class="pull-right text-muted small">4 minutes ago</span>
                                 </div>
                             </a>
@@ -620,7 +620,7 @@
                                     <br/>
                                     <p class="fa fa-random"> fa-random </p>
                                     <br/>
-                                    <p class="fa fa-comment"> fa-comment </p>
+                                    <p class="fa fa-description"> fa-description </p>
                                     <br/>
                                     <p class="fa fa-magnet"> fa-magnet </p>
                                     <br/>
@@ -837,7 +837,7 @@
                                     <br/>
                                     <p class="fa fa-tachometer"> fa-tachometer </p>
                                     <br/>
-                                    <p class="fa fa-comment-o"> fa-comment-o </p>
+                                    <p class="fa fa-description-o"> fa-description-o </p>
                                     <br/>
                                     <p class="fa fa-comments-o"> fa-comments-o </p>
                                     <br/>
@@ -1646,7 +1646,7 @@
                                     <br/>
                                     <span class="glyphicon glyphicon-random"> glyphicon-random </span>
                                     <br/>
-                                    <span class="glyphicon glyphicon-comment"> glyphicon-comment </span>
+                                    <span class="glyphicon glyphicon-description"> glyphicon-description </span>
                                     <br/>
                                     <span class="glyphicon glyphicon-magnet"> glyphicon-magnet </span>
                                     <br/>
