--- a/src/main/resources/static/pages/flot.html
+++ b/src/main/resources/static/pages/flot.html
@@ -191,7 +191,7 @@
                         <li>
                             <a href="#">
                                 <div>
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
+                                    <i class="fa fa-description fa-fw"></i> New Comment
                                     <span class="pull-right text-muted small">4 minutes ago</span>
                                 </div>
                             </a>
